# uc3m-timetable

./: .gitignore  Cargo.toml  README.md  wrangler.toml
src/: lib.rs
uc3m-timetable/: Cargo.toml
uc3m-timetable/src/: lib.rs  parse.rs  util.rs
uc3m-timetable/src/ical/: components.rs  mod.rs
uc3m-timetable/tests/: expected.ics  parse_timetable.rs  timetable.html
