[package]
name = "uc3m-timetable-worker"
version = "0.1.0"
authors = ["Hugo Manrique <cargo@hugmanrique.me>"]
edition = "2021"
description = "UC3M iCalendar timetable worker"
repository = "https://github.com/hugmanrique/uc3m-timetable"
license = "MIT"
keywords = ["uc3m", "icalendar", "timetable", "schedule", "worker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0"
uc3m-timetable = { path = "uc3m-timetable" }
worker = "0.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
