[package]
name = "uc3m-timetable"
version = "0.1.0"
authors = ["Hugo Manrique <cargo@hugmanrique.me>"]
edition = "2021"
description = "UC3M iCalendar timetable generator"
repository = "https://github.com/hugmanrique/uc3m-timetable"
license = "MIT"
keywords = ["uc3m", "icalendar", "timetable", "schedule"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.6"
futures = "0.3"
itertools = "0.10"
html5ever = "0.26"
once_cell = "1.13"
reqwest = { version = "0.11", features = ["stream"] }
selectors = "0.22" # pinned to scraper version dep
scraper = "0.13"

[dev-dependencies]
tokio = { version = "1.20", features = ["test-util", "macros"] }